--- a/style.css
+++ b/style.css
@@ -56,6 +56,7 @@
     background-color: rgb(3, 92, 193);
     font-size: 17px;
     color: white;
+    cursor: pointer;
 }
 
 @media (max-width:400px) {
