--- a/style.css
+++ b/style.css
@@ -13,21 +13,28 @@
 }
 
 .card {
-   
+   border-radius: 10px;
     width: 700px;
     height: 300px;
     box-shadow: rgba(0, 0, 0, 0.3) 2px 12px 12px 12px;
 }
 
 .card-head {
-    height: 70%;
+    height: 50%;
     display: flex;
     justify-content: center;
     text-align: center;
     align-items: center;
+    padding: 0px 15px;
     font-size: 19px;
     font-weight: 700;
     font-family: Cambria, Cochin, Georgia, Times, 'Times New Roman', serif;
+}
+
+.heading{
+    text-align: center;
+    padding: 10px 0;
+    font-family: Verdana, Geneva, Tahoma, sans-serif;
 }
 
 .author-div {
